# first the "required" modules

subdir('base')

subdir('color')

subdir('constants')

subdir('display')

subdir('event')

subdir('key')

subdir('mouse')

subdir('rect')

subdir('rwobject')

subdir('surface')

subdir('surflock')

subdir('time')

subdir('joystick')

subdir('draw')

subdir('image')

subdir('transform')

subdir('mask')

subdir('bufferproxy')

subdir('pixelarray')

subdir('math')

subdir('locals')

subdir('pixelcopy')

subdir('surfarray')

subdir('sndarray')

subdir('newbuffer')

subdir('typing')

subdir('sprite')

subdir('cursors')

subdir('version')

# new/experimental/uncommon stuff, but built by default
subdir('_debug')

subdir('system')

subdir('tests')

subdir('geometry')

subdir('window')

subdir('_render')

subdir('gfxdraw')

subdir('midi')

subdir('_sdl2')

subdir('camera')

subdir('scrap')

subdir('pkgdata')

# optional modules
subdir('font')

subdir('sysfont')

subdir('ftfont')

subdir('mixer')

subdir('_freetype')

subdir('pypm')

subdir('macosx')

subdir('docs')

subdir('resources')

subdir('__briefcase')

subdir('__pyinstaller')

# init
subdir('pygame')
